Allow spinner to used in the page as well as as a fullscreen loader

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -15,7 +15,7 @@
     <script>require('initialize');</script>
 </head>
 <body>
-    <div class="page-loader"></div>
+    <div class="page-loader fixed"></div>
     <div id="top-level-nav" class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
