Temporarily kill theme

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -30,10 +30,10 @@
                         <li><a data-href="">Dashboard</a></li>
                         <li><a data-href="requests">Requests</a></li>
                         <li><a data-href="tasks">Tasks</a></li>
-                        <li class="divider-vertical"></li>
+                        <!--li class="divider-vertical"></li>
                         <li>
                             <a id="theme-changer" class="dont-route"></a>
-                        </li>
+                        </li-->
                     </ul>
                 </div>
             </div>
