--- a/SingularityService/src/main/resources/static/index.htm
+++ b/SingularityService/src/main/resources/static/index.htm
@@ -30,15 +30,10 @@
                         <li><a data-href="">Dashboard</a></li>
                         <li><a data-href="requests">Requests</a></li>
                         <li><a data-href="tasks">Tasks</a></li>
-                        <li class="divider-vertical"></li>
+                        <!--li class="divider-vertical"></li>
                         <li>
                             <a id="theme-changer" class="dont-route"></a>
-                        </li>
-                    </ul>
-                    <ul class="nav pull-right">
-                        <li class="dropdown">
-                            <a id="nav-user-name" class="dont-route"></a>
-                        </li>
+                        </li-->
                     </ul>
                 </div>
             </div>
