--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Singularity</title>
-    <link rel="shortcut icon" href="static/images/favicon.ico" />
+    <link rel="shortcut icon" href="/singularity/static/images/favicon.ico" />
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="static/css/app.css">
-    <script src="static/js/vendor.js"></script>
-    <script src="static/js/app.js"></script>
+    <link rel="stylesheet" href="/singularity/static/css/app.css">
+    <script src="/singularity/static/js/vendor.js"></script>
+    <script src="/singularity/static/js/app.js"></script>
     <script>require('initialize');</script>
 </head>
 <body>
