Add web hooks page @tpetr

--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -30,6 +30,7 @@
                         <li><a data-href="">Dashboard</a></li>
                         <li><a data-href="requests">Requests</a></li>
                         <li><a data-href="tasks">Tasks</a></li>
+                        <li><a data-href="webhooks">Webhooks</a></li>
                         <!--li class="divider-vertical"></li>
                         <li>
                             <a id="theme-changer" class="dont-route"></a>
