New search page

--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -28,6 +28,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li><a data-href="">Dashboard</a></li>
+                        <li><a data-href="search">Search</a></li>
                         <li><a data-href="requests">Requests</a></li>
                         <li><a data-href="tasks">Tasks</a></li>
                         <li><a data-href="racks">Racks</a></li>
