--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -34,10 +34,10 @@
                         <li><a data-href="racks">Racks</a></li>
                         <li><a data-href="slaves">Slaves</a></li>
                         <li><a data-href="webhooks">Webhooks</a></li>
-                        <!--li class="divider-vertical"></li>
+                        <li class="divider-vertical"></li>
                         <li>
                             <a id="theme-changer" class="dont-route"></a>
-                        </li-->
+                        </li>
                     </ul>
                 </div>
             </div>
