Kill need for .dont-route class on index page

--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -19,12 +19,12 @@
     <div id="top-level-nav" class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <button type="button"class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="">Singularity</a>
+                <a class="brand" href="/">Singularity</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li><a data-href="">Dashboard</a></li>
@@ -36,7 +36,7 @@
                         <li><a data-href="webhooks">Webhooks</a></li>
                         <li class="divider-vertical"></li>
                         <li>
-                            <a id="theme-changer" class="dont-route"></a>
+                            <a id="theme-changer"></a>
                         </li>
                     </ul>
                 </div>
