--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -31,9 +31,14 @@
                         <li><a data-href="search">Search</a></li>
                         <li><a data-href="requests">Requests</a></li>
                         <li><a data-href="tasks">Tasks</a></li>
-                        <li><a data-href="racks">Racks</a></li>
-                        <li><a data-href="slaves">Slaves</a></li>
-                        <li><a data-href="webhooks">Webhooks</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a data-href="racks">Racks</a></li>
+                                <li><a data-href="slaves">Slaves</a></li>
+                                <li><a data-href="webhooks">Webhooks</a></li>
+                            </ul>
+                        </li>
                         <li class="divider-vertical"></li>
                         <li>
                             <a id="theme-changer"></a>
