--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="/">Singularity</a>
+                <a class="brand" href="">Singularity</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li><a data-href="">Dashboard</a></li>
