--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -44,6 +44,9 @@
             </div>
         </div>
     </div>
+    <div class="global-search">
+        <input type="search" required />
+    </div>
     <div id="page" class="container"></div>
     <div style="-webkit-transform: translateZ(0)"></div>
 </body>
