--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -27,9 +27,9 @@
                 <a class="brand" href="">Singularity</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
+                        <li><a data-invoke-global-search><span class="icon icon-search hidden-phone"></span> <span class="visible-phone">Search</span></a></li>
                         <li><a data-href="">Dashboard</a></li>
                         <li><a data-href="status">Status</a></li>
-                        <li><a data-invoke-global-search>Search</a></li>
                         <li><a data-href="requests">Requests</a></li>
                         <li><a data-href="tasks">Tasks</a></li>
                         <li class="dropdown">
@@ -46,7 +46,9 @@
         </div>
     </div>
     <div class="global-search">
+        <a data-close-global-search class="global-search-close">&times;</a>
         <div class="global-search-input-wrapper">
+            <p class="global-search-tip ui-tip">Tip: You can press <code>t</code> to open this search and <code>esc</code> to close it.</p>
             <input type="search" placeholder="Search all requests..." required />
         </div>
     </div>
