More search improvements

--- a/SingularityUI/app/assets/index.html
+++ b/SingularityUI/app/assets/index.html
@@ -27,7 +27,7 @@
                 <a class="brand" href="">Singularity</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li><a data-invoke-global-search><span class="icon icon-search hidden-phone"></span> <span class="visible-phone">Search</span></a></li>
+                        <li><a data-invoke-global-search><span class="icon icon-search hidden-phone"></span> <span class="hidden-phone icon-search-adjacent-text">Search</span><span class="visible-phone">Search</span></a></li>
                         <li><a data-href="">Dashboard</a></li>
                         <li><a data-href="status">Status</a></li>
                         <li><a data-href="requests">Requests</a></li>
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <div class="global-search">
+    <div class="global-search" data-close-global-search>
         <a data-close-global-search class="global-search-close">&times;</a>
         <div class="global-search-input-wrapper">
             <p class="global-search-tip ui-tip">Tip: You can press <code>t</code> to open this search and <code>esc</code> to close it.</p>
