--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="container">
             <h1>Singularity</h1>
             <h2>
-                A platform that enables deploying and running services and scheduled jobs in cloud infrastructures, providing efficient management of the underlying processes life cycle and effective use of the cluster resources, running on
+                Singularity makes continuous deployment a breeze! It takes care of deploying and running services and scheduled jobs in cloud infrastructures, providing efficient management of the underlying processes life cycle and effective use of the cluster resources, thanks to 
                 <a href="http://mesos.apache.org" target="_blank">Mesos</a>.
                 <a id="what-is-singularity" href="https://github.com/HubSpot/Singularity#what-is-singularity">
                     What is Singularity?
@@ -41,7 +41,7 @@
             <div id="button-container">
                 <a href="https://github.com/HubSpot/Singularity/blob/master/README.md">Docs</a>
                 <a href="https://github.com/HubSpot/Singularity/blob/master/Docs/Singularity_Local_Setup_For_Testing.md">Try it</a>
-                <a href="https://github.com/HubSpot/Singularity">Repo</a>
+                <a href="https://github.com/HubSpot/Singularity">GitHub</a>
             </div>
         </div>
         
