Removed annoying anchor thing

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <h2>
                 Singularity makes continuous deployment a breeze! It takes care of deploying and running services and scheduled jobs in cloud infrastructures, providing efficient management of the underlying processes life cycle and effective use of the cluster resources, thanks to 
                 <a href="http://mesos.apache.org" target="_blank">Mesos</a>.
-                <a id="what-is-singularity" href="https://github.com/HubSpot/Singularity#what-is-singularity">
-                    What is Singularity?
-                </a>
+                <div id="what-is-singularity">
+                    <a href="https://github.com/HubSpot/Singularity#what-is-singularity">
+                        What is Singularity?
+                    </a>
+                </div>
             </h2>
 
             <div id="clone-container">
